# django_develop_way

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev.docker-compose.yaml  manage.py  pyproject.toml
backend/: settings.py  urls.py  wsgi.py
backend/admin/: apps.py  asgi.py  settings.py  urls.py
backend/admin/templates/admin/: base_site.html
backend/core/: exceptions.py
backend/health/: apps.py  urls.py  views.py
backend/products/: urls.py
backend/products/models/: products.py
backend/products/serializers/: products_serializers.py
backend/products/tests/: conftest.py  factories.py  test_products_crud.py
backend/products/views/: products_crud.py
