[tool.poetry]
name = "django-develop-way"
version = "0.1.0"
description = ""
authors = ["Pavel Larchenko <lar.pasha.chenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
django = "^5.0.3"
djangorestframework = "^3.15.0"
django-filter = "^24.1"
django-redis = "^5.4.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
environs = "^11.0.0"
gunicorn = "^21.2.0"
django-storages = "^1.14.2"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.27.1"
boto3 = "^1.34.64"
django-guid = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-django = "^4.8.0"
pytest-faker = "^2.0.0"
pytest-cov = "^4.1.0"
pytest-factoryboy = "^2.7.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
py_version = 310
skip = [".gitignore", ".dockerignore"]
known_first_party = ["services"]
line_length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.admin.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.yapfignore]
ignore_patterns = [
    ".git",
    ".pytest_cache",
    ".venv",
    "migrations/*",
    "test/*",
    "pyproject.toml"
]
